<resources>
    <string name="app_name" translatable="false">Ouphe_Collector</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_collection" translatable="false">Collection</string>
    <string name="menu_scanner" translatable="false">Scanner</string>
    <string name="menu_decklist" translatable="false">Decklists</string>
    <string name="menu_wishlist" translatable="false">Wishlist</string>
    <string name="menu_profile" translatable="false">Profile</string>
    <string name="nav_header_title" translatable="false">MTG Collector</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="collection" translatable="false">Collection</string>
    <string name="scanner" translatable="false">Scanner</string>
    <string name="deck" translatable="false">Deck</string>
    <string name="wishlist" translatable="false">Wishlist</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="ouphe_collector" translatable="false">Ouphe Collector</string>
    <string name="action_search" translatable="false">search</string>
    <string name="card_id" translatable="false">Card ID</string>
    <string name="quantity" translatable="false">Quantity</string>
    <string name="username" translatable="false">Username</string>
    <string name="email" translatable="false">Email</string>
    <string name="new_username" translatable="false">New Username</string>
    <string name="new_email" translatable="false">New Email</string>
    <string name="create_profile" translatable="false">Create Profile</string>
    <string name="profile_created" translatable="false">Profile created successfully!</string>
    <string name="card_name" translatable="false">Card Name</string>
    <string name="menu_search" translatable="false">Search</string>
    <string name="advanced_search" translatable="false">Advanced Search</string>

    <string name="card_name_textview" translatable="false">Card Name</string>
    <string name="mana_cost" translatable="false">Mana Cost</string>
    <string name="type" translatable="false">Type</string>
    <string name="rarity" translatable="false">Rarity</string>
    <string name="set" translatable="false">Set</string>
    <string name="card_text" translatable="false">Card Text</string>
    <string name="power_toughness" translatable="false">Power/Toughness</string>
    <string name="menu_card_detail" translatable="false">Card Detail</string>

    <string name="type_format" translatable="false">Type: %1$s</string>
    <string name="rarity_format" translatable="false">Rarity: %1$s</string>
    <string name="set_format" translatable="false">Set: %1$s</string>
    <string name="power_toughness_format" translatable="false">Power/Toughness: %1$s/%2$s</string>
    <string name="card_image" translatable="false">card image</string>
    <string name="flavor_text_format" translatable="false">%s</string>
    <string name="colors_format" translatable="false">Colors: %s</string>
    <string name="color_identity_format" translatable="false">Color Identity: %s</string>
    <string name="artist_format" translatable="false">Artist: %s</string>
    <string name="home" translatable="false">home</string>
    <string name="search_for_cards" translatable="false">search for cards</string>

    <string name="card_printing_image" translatable="false">Card Printing Image</string>
    <string name="recent_searches" translatable="false">Recent Searches</string>
    <string name="show_more" translatable="false">Show More</string>
    <string name="error_message" translatable="false">An error occurred.</string>
    <string name="error_loading_data" translatable="false">Failed to load data.</string>
    <string name="no_results_found" translatable="false">No results found.</string>
    <string name="add_new_collection" translatable="false">Add new collection</string>
    <string name="collection_name" translatable="false">Collection Name</string>
    <string-array name="collection_tags">
        <item>Magic: the Gathering Online</item>
        <item>Arena</item>
        <item>Paper</item>
    </string-array>
    <string name="add" translatable="false">Add</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="condition" translatable="false">Condition</string>
    <string name="is_foil" translatable="false">Foil?</string>
    <string name="language" translatable="false">Language</string>
    <string name="set_code" translatable="false">Set Code</string>
    <string name="acquired_price" translatable="false">Acquired Price</string>
    <string name="created_at" translatable="false">Created:</string>
    <string name="collection_tag" translatable="false">Collection Tag</string>
    <string name="last_modified" translatable="false">Last Modified:</string>
    <!-- ... other string resources ... -->
    <string name="edit_collection" translatable="false">Edit Collection</string>
    <string name="save" translatable="false">Save</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="delete_confirmation" translatable="false">Are you sure you want to delete?</string>
    <string name="delete_collection" translatable="false">Delete Collection</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="add_card_collection" translatable="false">Add Card Collection</string>
    <string name="acquisition_price" translatable="false">Acquisition price</string>
    <string name="scan" translatable="false">scan</string>
    <string name="open" translatable="false">open</string>
    <string-array name="card_conditions">
        <item>NM</item>
        <item>SP</item>
        <item>MP</item>
        <item>HP</item>
    </string-array>


    <!-- <string name="app_name">Ouphe Collector</string> -->

    <!-- <string name="card_image">Card Image</string> -->

    <!-- <string name="type_format">Type: %1$s</string> -->

    <!-- <string name="rarity_format">Rarity: %1$s</string> -->

    <!-- <string name="set_format">Set: %1$s</string> -->

    <!-- <string name="power_toughness_format">%1$s/%2$s</string> -->

    <!-- <string name="flavor_text_format">"%1$s"</string> -->

    <!-- <string name="colors_format">Colors: %1$s</string> -->

    <!-- <string name="color_identity_format">Color Identity: %1$s</string> -->

    <!-- <string name="artist_format">Artist: %1$s</string> -->

    <!-- <string name="add_new_collection">Add new collection</string> -->

    <!-- ... other string resources ... -->
    <!-- <string name="card_id">Card ID</string> -->

    <!-- <string name="quantity">Quantity</string> -->

    <!-- <string name="condition">Condition</string> -->

    <!-- <string name="is_foil">Foil</string> -->

    <!-- <string name="language">Language</string> -->

    <!-- <string name="set_code">Set Code</string> -->

    <!-- <string name="add">Add</string> -->

    <!-- <string name="cancel">Cancel</string> -->

    <!-- <string name="collection_name">Collection Name</string> -->
</resources>