<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@+id/collection_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_created_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_at"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_view_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collection_tag" />

    <TextView
        android:id="@+id/text_view_last_modified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_modified" />

</LinearLayout>